FIX: added wrapping to footer grid

--- a/github-user-search-app/styles/_desktop-style.scss
+++ b/github-user-search-app/styles/_desktop-style.scss
@@ -34,7 +34,6 @@
 
     .card-footer {
       margin-left: 9.875rem;
-      width: 530px;
     }
   }
 }
